Kelsey Development Sandbox/src/objects/DS_Background_Family_Info_F__c.object
<CustomObject>
    <fields>
        <fullName>FLANGHMS__c</fullName>
        <description>4. Language spoken at home is Other, Specified</description>
        <label>FLANGHMS</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLANGHOM__c</fullName>
        <description>4.  Primary language</description>
        <label>FLANGHOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>98</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLFATHER__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1.  Type of adult: Father</description>
        <label>FLFATHER</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLGRAND__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1.  Type of adult: Grandparent(s)</description>
        <label>FLGRAND</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLMOTHER__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1.  Type of adult: Mother</description>
        <label>FLMOTHER</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLNONREL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1.  Type of adult: Non-Relative</description>
        <label>FLNONREL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLOREL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1. Type of adult: Other Adult Relative</description>
        <label>FLOREL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLOTHRSP__c</fullName>
        <description>1.  Type of adult: Other, Specified</description>
        <label>FLOTHRSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLOTHR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1.  Type of adult: Other</description>
        <label>FLOTHR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLPARTNR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1.  Type of adult: Parent&apos;s Partner</description>
        <label>FLPARTNR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLUNK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1.  Type of adult: Unknown</description>
        <label>FLUNK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMDIFRIA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>6. Family currently experiencing any difficulties : Access to benefits</description>
        <label>FMDIFRIA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMDIFRIE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>6. Family currently experiencing any difficulties : Employment</description>
        <label>FMDIFRIE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMDIFRIH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>6. Family currently experiencing any difficulties : Homelessness or access to stable housing</description>
        <label>FMDIFRIH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMDIFRIL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>6. Family currently experiencing any difficulties : Legal problems</description>
        <label>FMDIFRIL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMDIFRIOSP__c</fullName>
        <description>6. Family currently experiencing any difficulties : Other Specified</description>
        <label>FMDIFRIOSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMDIFRIO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>6. Family currently experiencing any difficulties : Other</description>
        <label>FMDIFRIO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMDIFRIUK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>6. Family currently experiencing any difficulties : Unknown</description>
        <label>FMDIFRIUK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMDIFRI__c</fullName>
        <description>6. Family currently experiencing any difficulties associated with the service member&apos;s reintegration</description>
        <label>FMDIFRI</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FMET__c</fullName>
        <description>2. How was this form administered?</description>
        <label>FMET</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FMFM1B2__c</fullName>
        <description>4. Branch 2: Reserve or National Guard (Family Member 1)</description>
        <label>FMFM1B2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FMFM1B__c</fullName>
        <description>4. Service Branch for Family Member 1 (Army, Air Force, Navy, Marine Corps, or Coast Guard)</description>
        <label>FMFM1B</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FMFM1DP__c</fullName>
        <description>4. Did they experience a wartime deployment? (Family Member 2)</description>
        <label>FMFM1DP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FMFM1MODP__c</fullName>
        <description>4. During the child&apos;s life what was the total number of months this person was deployed? (Family Member 1)</description>
        <label>FMFM1MODP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FMFM1RDP__c</fullName>
        <description>4. Most recent deployment for Family Member 1 (Currently, Last 30 days, Last Year, Greater than 1 year, or unknown)</description>
        <label>FMFM1RDP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FMFM1S__c</fullName>
        <description>4. Status: Active Duty, Retired, or Other (Family Member 1)</description>
        <label>FMFM1S</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>98</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FMFM2B2__c</fullName>
        <description>4. Branch 2: Reserve or National Guard (Family Member 2)</description>
        <label>FMFM2B2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FMFM2DP__c</fullName>
        <description>4. Did they experience a wartime deployment? (Family Member 2)</description>
        <label>FMFM2DP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FMFM2MODP__c</fullName>
        <description>4. During the child&apos;s life what was the total number of months this person was deployed? (Family Member 2)</description>
        <label>FMFM2MODP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FMFM2RDP__c</fullName>
        <description>4. Most recent deployment for Family Member 2 (Currently, Last 30 days, Last Year, Greater than 1 year, or unknown)</description>
        <label>FMFM2RDP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FMFM2S__c</fullName>
        <description>4. Status: Active Duty, Retired, or Other (Family Member 2)</description>
        <label>FMFM2S</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>98</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FMFM3DP__c</fullName>
        <description>4. Did they experience a wartime deployment? (Family Member 3)</description>
        <label>FMFM3DP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FMFM3MODP__c</fullName>
        <description>4. During the child&apos;s life what was the total number of months this person was deployed? (Family Member 3)</description>
        <label>FMFM3MODP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FMFM3RDP__c</fullName>
        <description>4. Most recent deployment for Family Member 3 (Currently, Last 30 days, Last Year, Greater than 1 year, or unknown)</description>
        <label>FMFM3RDP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FMFM3S__c</fullName>
        <description>4. Status: Active Duty, Retired, or Other (Family Member 3)</description>
        <label>FMFM3S</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>98</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FMFMR1SP__c</fullName>
        <description>4. Family Member 1, Other specified</description>
        <label>FMFMR1SP</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMFMR1__c</fullName>
        <description>4. Family Member 1</description>
        <label>FMFMR1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>98</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FMFMR2SP__c</fullName>
        <description>4. Family Member 2, Other specified</description>
        <label>FMFMR2SP</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMFMR2__c</fullName>
        <description>4. Family Member 2</description>
        <label>FMFMR2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>98</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FMFMR3SP__c</fullName>
        <description>4. Family Member 3, Other specified</description>
        <label>FMFMR3SP</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMFMR3__c</fullName>
        <description>4. Family Member 3</description>
        <label>FMFMR3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>98</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FMILMOVE__c</fullName>
        <description>2. How many times did the family move or relocate for military reasons or orders</description>
        <label>FMILMOVE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FMILSERV__c</fullName>
        <description>3. What is the total number of immediate family members who have served in the military since 2001</description>
        <label>FMILSERV</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FMKILACC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>5. Service member was killed: Accidental death</description>
        <label>FMKILACC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMKILCOM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>5. Service member was killed: Combat</description>
        <label>FMKILCOM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMKILMED__c</fullName>
        <defaultValue>false</defaultValue>
        <description>5. Service member was killed: Medical Condition or Illness</description>
        <label>FMKILMED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMKILOSP__c</fullName>
        <description>5. Service member was killed: Other specified</description>
        <label>FMKILOSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMKILOTH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>5. Service member was killed: Other</description>
        <label>FMKILOTH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMKILSUIC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>5. Service member was killed: Suicide</description>
        <label>FMKILSUIC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMKILUK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>5. Service member was killed: Unknown</description>
        <label>FMKILUK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMKIL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>5. Service member was killed</description>
        <label>FMKIL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMOMMIL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>1. Mother is service member</description>
        <label>FMOMMIL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMPIAMP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>5. Service members experienced Physical Injury: Amputation</description>
        <label>FMPIAMP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMPIBRN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>5. Service members experienced Physical Injury: Burns</description>
        <label>FMPIBRN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMPICPF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>5. Service members experienced Physical Injury: Chronic Pain or fatigue</description>
        <label>FMPICPF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMPIOSP__c</fullName>
        <description>5. Service members experienced Physical Injury: other specified</description>
        <label>FMPIOSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMPIOTH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>5. Service members experienced Physical Injury: other</description>
        <label>FMPIOTH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMPITBI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>5. Service members experienced Physical Injury: Traumatic Brain Injury/ Blast-Related Concussion</description>
        <label>FMPITBI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMPIUK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>5. Service members experienced Physical Injury: Unknown</description>
        <label>FMPIUK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMPI__c</fullName>
        <defaultValue>false</defaultValue>
        <description>5. Service members experienced Physical Injury</description>
        <label>FMPI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMSTAT__c</fullName>
        <description>11. Have you [has your child] or someone in your [your child&apos;s] family experienced any military-associated life changes since the last CIMI assessment (e.g., deployment, injury, reintegration, etc.)?</description>
        <label>FMSTAT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FMSTDEP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>5. Service members experienced Stress symptoms: Depression</description>
        <label>FMSTDEP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMSTOSP__c</fullName>
        <description>5. Service members experienced Stress symptoms: Other Specified</description>
        <label>FMSTOSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMSTOTH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>5. Service members experienced Stress symptoms: Other</description>
        <label>FMSTOTH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMSTPTSD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>5. Service members experienced Stress symptoms: PTSD</description>
        <label>FMSTPTSD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMSTSUB__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Substance use or abuse</description>
        <label>FMSTSUB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMSTSUIC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>5. Service members experienced Stress symptoms: Suicidal thoughts or attempts</description>
        <label>FMSTSUIC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMSTUK__c</fullName>
        <defaultValue>false</defaultValue>
        <description>5. Service members experienced Stress symptoms: Unknown</description>
        <label>FMSTUK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FMST__c</fullName>
        <defaultValue>false</defaultValue>
        <description>5. Service members experienced Stress symptoms</description>
        <label>FMST</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FNEWTR__c</fullName>
        <description>4.  Has any new trauma been experienced?</description>
        <label>FNEWTR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FNOMHOUSESP__c</fullName>
        <description>4. In the past 30 days, where have you [has your child] been living most of the time? Specified</description>
        <label>FNOMHOUSESP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FNOMHOUSE__c</fullName>
        <description>4. In the past 30 days, where have you [has your child] been living most of the time?</description>
        <label>FNOMHOUSE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>96</fullName>
                </value>
                <value>
                    <fullName>98</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FNTDTOXN__c</fullName>
        <description>5c. Number of nights facility for detox/inpatient or residential substance abuse treatment</description>
        <label>FNTDTOXN</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FNTDTOXRU__c</fullName>
        <description>5c. Number of nights facility for detox/inpatient or residential substance abuse treatment Refused/UK</description>
        <label>FNTDTOXRU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>96</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FNTERN__c</fullName>
        <description>5e. Number of times gone to emergency room for psychiatric or emotional problem</description>
        <label>FNTERN</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FNTERRU__c</fullName>
        <description>5e. Number of times in emergency room for a psychiatric or emotional problem Refused/UK</description>
        <label>FNTERRU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>96</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FNTHOMEN__c</fullName>
        <description>5a. Number of nights homeless</description>
        <label>FNTHOMEN</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FNTHOMERU__c</fullName>
        <description>5a. Number of nights homeless Refused/UK</description>
        <label>FNTHOMERU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>96</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FNTHOSPN__c</fullName>
        <description>5b. Number of nights hospital for mental health care</description>
        <label>FNTHOSPN</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>